--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Affordable n' Delicious</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="https://website-com.github.io/CakesCraving-MainPage/">Home</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -38,9 +38,6 @@
          <p>Contacts</p>
              </a></ol>
                  
-             <ol><a href="#">
-         <p>Socials</p>
-                 </a></ol>
                  <h1>&copy;Cake's Craving 2023</h1>
              
          </footer>
