--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="https://website-com.github.io/CakesCraving-MainPage/">Home</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://website-com.github.io/CakesCraving-Contacts/">Contact</a></li>
             </ul>
         </nav>
         </header>
@@ -34,7 +34,7 @@
         </main>
         
         <footer>
-            <ol><a href="#">
+            <ol><a href="https://website-com.github.io/CakesCraving-Contacts/">
          <p>Contacts</p>
              </a></ol>
                  
