--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="cakes">
             <h2>Custom cake</h2>
                <p>When ordering a custom cake, please send a picture to us and explain a bit about the cake below!</p>
-               <ul><a href="#"><h1>Order Now[Facebook]</h1></a></ul>
+               <ul><a href="https://www.facebook.com/cakescravin"><h1>Order Now[Facebook]</h1></a></ul>
                <ul><h1>Order- 01759510115 [Phone/Whatsapp]</h1></ul>
             </div>
             </section>
